Bug 1473041 - save and restore PermitSubpixelAA state for basic layer paint callback. r=mstange a=lizzard